[project]
name = "hrv-readiness-study"
version = "0.1.0"
description = "Study of HRV and readiness data"
authors = [
    {name = "Chandler Shortlidge",email = "chandlershortlidge@gmail.com"}
]
license = {text = "None"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
